updated OrderServiceTest and ProductServiceTest